Fix UI overflowing

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .choiceBtn {
-  padding: 1rem 2rem;
-  font-size: 4rem;
+  padding: 0.5rem 1rem;
+  font-size: 2.5rem;
 }
 .choicesContainer {
   display: flex;
@@ -9,7 +9,7 @@
 }
 .title {
   color: white;
-  font-size: 5rem;
+  font-size: 3.5rem;
   text-align: center;
   margin: 0;
   padding: 0.5rem 1rem;
@@ -26,7 +26,7 @@
 .playerName,
 footer {
   text-align: center;
-  font-size: 3rem;
+  font-size: 2.5rem;
   color: white;
 }
 footer a {
